--- a/ipynb/3-Linear Neural Networks/.vscode/settings.json
+++ b/ipynb/3-Linear Neural Networks/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.linting.flake8Enabled": false,
     "python.linting.enabled": false,
     "python.linting.pylintEnabled": false,
-    "python.linting.pycodestyleEnabled": true
+    "python.linting.pycodestyleEnabled": true,
+    "jupyter.jupyterServerType": "local"
 }
